# compute-sanitizer-test

./: .gitignore  CMakeLists.txt  README.md  do_cuobjdump.py
memcheck/: CMakeLists.txt
memcheck-dynamic-hybrid/: .cuda.cu  CMakeLists.txt  main.cpp  memcheck.h
memcheck-hybrid/: .cuda.cu  CMakeLists.txt  main.cpp  memcheck.h
